--- a/arquivos.css/styles.css
+++ b/arquivos.css/styles.css
@@ -144,6 +144,7 @@ main {
     transition: transform 0.3s, box-shadow 0.3s;
     text-align: center;
     position: relative;
+    cursor: pointer; /* Indica que o card é clicável */
 }
 
 .card::before {
@@ -388,6 +389,48 @@ footer h3 {
 .button:hover {
     background-color: #e15b4e;
     transform: translateY(-3px);
+}
+
+/* Modal Styling */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0, 0, 0, 0.4); 
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow);
+    text-align: center;
+}
+.modal-content h3 , .modal-content h2{
+    color: var(--primary-color); /* Define a cor dos h3 como a cor primária */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: var(--secondary-color);
 }
 
 @media (max-width: 768px) {
