--- a/arquivos.css/styles.css
+++ b/arquivos.css/styles.css
@@ -32,6 +32,9 @@ a {
     margin: 0 auto;
     padding: 20px;
 }
+.contact-banner p {
+    text-align: center;
+}
 
 header {
     background-color: var(--primary-color);
@@ -199,6 +202,7 @@ main {
 }
 
 .slideshow-container {
+    
     position: relative;
     width: 100%;
     max-width: 100%;
@@ -219,7 +223,9 @@ main {
     object-fit: cover;
     border-radius: var(--border-radius);
 }
-
+.mySlides p {
+    text-align: center;
+}
 .dots {
     text-align: center;
     padding: 10px 0;
@@ -261,6 +267,13 @@ main {
     text-align: center;
     overflow: hidden;
     margin: 0 auto;
+    
+}
+.testimonialSlides p  {
+   
+    text-align: center;
+    
+    
 }
 
 .testimonial-dots {
@@ -320,12 +333,15 @@ section h3 {
 }
 
 section p {
+    text-align: left;
     margin: 0 auto 30px;
     max-width: 800px;
     font-size: 1.5em;
     color: #555;
 }
-
+p{
+    text-align: left;
+}
 .service-image {
     width: 100%;
     max-height: 500px;
