--- a/arquivos.css/styles.css
+++ b/arquivos.css/styles.css
@@ -336,7 +336,8 @@ section h3 {
 }
 
 section p {
-    text-align: left;
+   
+    text-align: justify;
     margin: 0 auto 30px;
     max-width: 800px;
     font-size: 1.5em;
@@ -422,6 +423,11 @@ footer h3 {
     overflow: auto; 
     background-color: rgba(0, 0, 0, 0.4); 
     padding-top: 60px;
+}
+.quadro p {
+    text-align: justify;
+    
+
 }
 
 .modal-content {
